# ExplainLLM

./: Dockerfile.backend  Dockerfile.modelservice  Dockerfile.ui  ExplainLLM.md  README.md  docker-compose.yml  pyproject.toml
src/explainllm/: __init__.py  api.py  attention.py  backend.py  cli.py  config.py  convenience.py  engine.py  export.py  model_service.py  utils.py
src/explainllm/viz/: __init__.py  graph.py  heatmap.py  html.py  stepwise.py  text.py
src/streamlit_app/: app.py
tests/: conftest.py  test_attention.py  test_engine.py  test_export.py  test_utils.py  test_viz.py
